# gtk4_app

./: COPYING  README.md  meson.build
data/: github.aeldemery.gtk4_app.desktop  github.aeldemery.gtk4_app.gschema.xml  meson.build
data/resources/: gears-menu.ui  github.aeldemery.gtk4_app.gresource.xml  main-window.ui  preferences-dialog.ui
src/: Application.vala  MainWindow.vala  PreferencesDialog.vala
